# helloworldplus

./: README.md  test.ipynb
docs/: index.rst  index.srt
example_package-0.1.2/: pyproject.toml
example_package-0.1.2/example_package_c_bayraktar/: project_example.py
example_package-0.1.2/example_package_c_bayraktar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
