[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_c_bayraktar"
version = "0.1.2"
authors = [
  { name="Ceren H. Bayraktar", email="c.bayraktar@stud.uni-goettingen.de" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
